[package]
name = "debris"
version = "0.1.0"
authors = ["quapaw"]
edition = "2018"

[dependencies]
reqwest = { version = "0.9.13", features = ["rustls-tls"] }
scraper = "0.9.1"
threadpool = "1.7.1"
serde = { version = "1.0.90", features = ["derive"] }
matches = "0.1.8"
colored = "1.7.0"
lazy_static = "1.3.0"
clap = "2.33.0"
serde_json = "1.0.39"
prettytable-rs = "0.8.0"
